@startuml
hide circle
skinparam classAttributeIconSize 0
package "Model Component" {
    class ExpenseManager {
        - expenses : List<Expense>
        - budget : double
        - totalExpenses : double
        - remainingBalance : double
        --
        + getBudget() : double
        + getTotalExpenses() : double
        + getRemainingBalance() : double
        + getSize() : int
        + getExpenses() : List<Expense>

        + addExpense(expense : Expense) : void
        + deleteExpense(index : int) : Expense
        + getExpense(index : int) : Expense
        + replaceExpense(index : int, newExpense : Expense) : void

        + markExpense(index : int) : Expense
        + unmarkExpense(index : int) : Expense

        + setBudget(budget : double) : void
        + determineBudgetStatus() : BudgetStatus

        + sortExpenses() : List<Expense>
        + findExpensesByCategory(category : String) : List<Expense>
        + findExpensesByDescription(keyword : String) : List<Expense>
    }

    class Expense {
        - amount : double
        - description : String
        - category : String
        - isMarked : boolean
        --
        + getAmount() : double
        + getDescription() : String
        + getCategory() : String
        + isMarked() : boolean

        + mark() : void
        + unmark() : void

        + formatForDisplay() : String
    }

    enum BudgetStatus <<enumeration>> {
        EXCEEDED
        EQUAL
        NEAR
        OK
    }
}

' Relationships
ExpenseManager "1" *-- "0..*" Expense : contains
ExpenseManager ..> BudgetStatus : returns

note right of ExpenseManager
  Central data model managing all expenses
  and budget tracking.

  Key Invariants:
  • totalExpenses = sum of marked expenses
  • remainingBalance = budget - totalExpenses
  • All indexes are 1-based
end note

note right of Expense
  Immutable expense entry with amount,
  description, category, and paid status.
  Only marked expenses count toward total.
end note

note bottom of BudgetStatus
  Budget status levels:
  OK → NEAR → EQUAL → EXCEEDED
end note

@enduml
